--- a/StoryBoard/pom.xml
+++ b/StoryBoard/pom.xml
@@ -41,6 +41,11 @@
             <version>2.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.13.0</version>
+        </dependency>
     </dependencies>
     
 </project>
