--- a/StoryBoard-docker/app/Dockerfile
+++ b/StoryBoard-docker/app/Dockerfile
@@ -1,10 +1,6 @@
-FROM tomcat:9.0.55-jdk8-temurin
+FROM tomcat:9.0.82-jdk11-temurin-focal
 
-ADD BiblioRegistry.war /usr/local/tomcat/webapps/
-
-RUN mkdir /webApp_resources
-
-ADD arial.ttf /webApp_resources/
+ADD StoryBoard.war /usr/local/tomcat/webapps/
 
 EXPOSE 8080
 
