--- a/StoryBoardClient/pom.xml
+++ b/StoryBoardClient/pom.xml
@@ -12,6 +12,12 @@
             <version>4.5.14</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.13.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
