--- a/StoryBoard-docker/docker-compose.yml
+++ b/StoryBoard-docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   storyboard_mysql:
+    command: [ "--max_connections=500" ]
     image: mysql:5.7
     container_name: storyboard_mysql
     hostname: storyboard_mysql
