report server utilization as well

--- a/StoryBoardClient/pom.xml
+++ b/StoryBoardClient/pom.xml
@@ -18,6 +18,12 @@
             <version>3.13.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
