--- a/StoryBoardClient/pom.xml
+++ b/StoryBoardClient/pom.xml
@@ -30,6 +30,11 @@
             <version>1.5.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
     </dependencies>
     <build>
         <defaultGoal>compile</defaultGoal>
